--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
+    "react-avatar": "^3.10.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "shortid": "^2.2.16",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
